--- a/src/vibe_frontend/assets/main.css
+++ b/src/vibe_frontend/assets/main.css
@@ -1,37 +1,243 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Raleway:wght@300;400;600;700&display=swap');
+
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
+html {
+    background: #18162c;
+    font-family: Poppins, monospace;
+    font-size: 10pt;
+    scroll-behavior:smooth
+  }
+  
 body {
-    font-family: sans-serif;
-    font-size: 1.5rem;
+  padding: 0;
+  margin: 0;
 }
 
-img {
-    max-width: 50vw;
-    max-height: 25vw;
-    display: block;
-    margin: auto;
+.landing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #18162c;
 }
 
-form {
-    display: flex;
-    justify-content: center;
-    gap: 0.5em;
-    flex-flow: row wrap;
-    max-width: 40vw;
-    margin: auto;
-    align-items: baseline;
+.animation_planet {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #18162c;
+  margin-bottom: 200px;
 }
 
-button[type="submit"] {
-    padding: 5px 20px;
-    margin: 10px auto;
-    float: right;
+.gradient-text {
+  font-size: 8em;
+  background-image: linear-gradient(75deg, #f2549f, #12cad6, #f3ec78);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-text-fill-color: transparent;
 }
 
-#greeting {
-    margin: 10px auto;
-    padding: 10px 60px;
-    border: 1px solid #222;
+.gradient-button {
+  /* Fallback: Set a background color. */
+  background-color: #6c36d8;
+  
+  /* Create the gradient. */
+  background-image: linear-gradient(
+    45deg,
+    #9ff254 50%,
+    #12cad6 50%
+  );
+  
+  /* Set the background size and repeat properties. */
+  background-size: 270%;
+  background-repeat: repeat;
+  background-position: top right;
+
+  /* Use the text as a mask for the background. */
+  /* This will show the gradient as a text color rather than element bg. */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+
+  
+  animation: button-animation 0.65s 0.15s ease-out forwards;
 }
 
-#greeting:empty {
-    display: none;
+a:hover, a:hover span{
+    animation: button-animation-rev 0.65s ease-out forwards;
 }
+
+a:hover {
+  box-shadow: 3px 2px 10px 1px rgba(0,0,0,0.15);
+  transition: 0.5s;
+}
+
+@keyframes button-animation {
+  0% {
+    background-position: top right;
+  }
+  100% {
+    background-position: top left;
+  }
+}
+
+@keyframes button-animation-rev {
+  0% {
+    background-position: top left;
+  }
+  100% {
+    background-position: top right;
+  }
+}
+
+a {
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(45deg, #f2549f 50%, #9ff254 50%);
+  background-size: 270%;
+  background-repeat: repeat;
+  background-position: top right;
+  animation: button-animation 0.65s 0.15s ease-out forwards;
+  display: table;
+  border-radius: 0.5em;
+  text-decoration: none;
+  box-shadow: 7px 4px 20px 1px rgba(0,0,0,0.15);
+  /* padding: 1.5em 0; */
+  cursor: pointer;
+}
+
+a span {
+  display: flex;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: normal;
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 0;
+  width: 100%;
+  padding: 0.8em;
+}
+
+.planet {
+  height: 100%;
+  width: 100%;
+}
+
+.exchange-container {
+  display: flex;
+  gap: 5.5em;
+  justify-content: center;
+  align-items: center;
+  background: #18162c;
+}
+
+.exchange-icp {
+  display: flex;
+  grid-gap: 3em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.exchange-vibe {
+  display: flex;
+  margin-top: -1.7em;
+  grid-gap: 1em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.buy-token {
+  margin-top: -20em;
+}
+
+.exchange-container input {
+  background: #4a4e69;
+  font-size: 15px;
+  padding: 0.7em ;
+  outline: none;
+  color: white;
+  border: double 3px transparent;
+  border-radius: 6px;
+  background-image: linear-gradient(#ac9fbb, #ac9fbb), 
+                    linear-gradient(to right,  #f2549f, #12cad6, #f3ec78);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+}
+
+
+.buy-button {
+  display: flex;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: normal;
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 0;
+  width: 100%;
+  padding: 0.5em;
+}
+
+.balance-text {
+  color: #12cad6;
+}
+
+.last-section {
+  display: flex;
+  margin-top: 10em;
+  grid-gap: 7em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #18162c;
+}
+
+.gradient-vibe {
+  font-size: 2em;
+  margin-bottom: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(75deg, #f2549f, #12cad6, #f3ec78);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-text-fill-color: transparent;
+}
+
+.amount {
+  font-size: 1.8em;
+  color:  #f3ec78;
+}
+
+.yellow-button {
+    background-color:  #FCCD4D;
+    border: none;
+    color: #FFFFFF;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .white_text {
+    color: #FFFFFF;
+  }
+ 
